<resources>
    <string name="app_name">新闻资讯app</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="eduser">请输入用户名</string>
    <string name="edpwd">请输入密码</string>
    <string name="auto_login">自动登录</string>
    <string name="remember_pwd">记住密码</string>
    <string name="home">首页</string>
    <string name="me">我的</string>
    <string name="collect">资讯</string>
    <string name="searchText">搜索你喜欢的视频</string>
    <string name="exitLogin">退出登录</string>
    <string name="read">阅读</string>
    <string name="like">点赞</string>
    <string name="enjoy">分享</string>
    <string name="discuss">评论</string>
    <string name="myCollect">我的收藏</string>
    <string name="skin">换肤</string>
    <string name="exit">退出</string>
    <string name="cllectDetail">资讯详情</string>
    <string name="focus">关注</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>