<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_329dp"
        android:background="@mipmap/login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_204dp"
            android:layout_marginLeft="@dimen/dimen_18dp"
            android:layout_marginTop="@dimen/dimen_278dp"
            android:layout_marginRight="@dimen/dimen_18dp"
            android:background="@drawable/shape_register_activity"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:gravity="center"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="@dimen/dimen_25dp"
                    android:layout_height="@dimen/dimen_25dp"
                    android:background="@mipmap/account" />

                <EditText
                    android:id="@+id/edLogin_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_20dp"
                    android:background="@null"
                    android:hint="@string/eduser"
                    android:inputType="text"
                    android:paddingRight="@dimen/dimen_15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_500"
                    android:textSize="@dimen/size_18sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1dp"
                android:layout_marginTop="@dimen/dimen_23dp"
                android:layout_marginBottom="@dimen/dimen_23dp"
                android:background="@color/gray_200" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:gravity="center"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="@dimen/dimen_25dp"
                    android:layout_height="@dimen/dimen_15dp"

                    android:background="@mipmap/pwd" />

                <EditText
                    android:id="@+id/edLogin_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_20dp"
                    android:background="@null"
                    android:hint="@string/edpwd"
                    android:inputType="textPassword"
                    android:paddingRight="@dimen/dimen_15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_500"
                    android:textSize="@dimen/size_18sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/cbLogin_autoLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/dimen_18dp"
                    android:buttonTint="@color/green_200"
                    android:text="@string/auto_login"
                    android:textColor="@color/gray_500" />

                <CheckBox
                    android:id="@+id/cbLogin_rememberPwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/dimen_20dp"
                    android:buttonTint="@color/green_200"
                    android:text="@string/remember_pwd"
                    android:textColor="@color/gray_500" />
            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnLogin_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_marginLeft="@dimen/dimen_18dp"
            android:layout_marginTop="@dimen/dimen_67dp"
            android:layout_marginRight="@dimen/dimen_18dp"
            android:background="@drawable/shape_login_activity_btn2"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/size_20sp" />
    </LinearLayout>
</RelativeLayout>