<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.MeFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_210dp"
        android:background="@drawable/shape_linear_gradual"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_45dp"
            android:gravity="center">

            <TextView
                android:layout_width="@dimen/dimen_40dp"
                android:layout_height="@dimen/dimen_24dp"
                android:text="@string/me"
                android:textColor="@color/white_text"
                android:textSize="@dimen/size_18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_100dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/titleImg"
                android:layout_width="@dimen/dimen_60dp"
                android:layout_height="@dimen/dimen_60dp"
                android:background="@mipmap/my_header"
                android:layout_marginLeft="@dimen/dimen_20dp"
                android:scaleType="fitXY"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_15dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titleName"
                    android:layout_width="@dimen/dimen_100dp"
                    android:layout_height="@dimen/dimen_20dp"
                    android:layout_marginBottom="@dimen/dimen_5dp"
                    android:text="兔兔IT血糖"
                    android:textColor="@color/white_text"
                    android:textSize="@dimen/size_16sp" />

                <TextView
                    android:id="@+id/titleAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_20dp"
                    android:text="欢迎来到此平台"
                    android:textColor="@color/white_text"
                    android:textSize="@dimen/size_12sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_read"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white_text"
                    android:text="10"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white_text"
                    android:text="@string/read"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white_text"
                    android:text="10"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white_text"
                    android:text="@string/like"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white_text"
                    android:text="10"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white_text"
                    android:text="@string/discuss"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_enjoy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white_text"
                    android:text="10"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white_text"
                    android:text="@string/enjoy"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_78dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="@dimen/dimen_30dp"
            android:layout_height="@dimen/dimen_30dp"
            android:background="@mipmap/icon_collect"
            android:layout_marginLeft="@dimen/dimen_25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_25dp"
            android:gravity="center"
            android:text="@string/myCollect"
            android:textColor="#404040"
            android:textSize="@dimen/size_16sp"
            android:layout_marginLeft="@dimen/dimen_5dp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="@dimen/dimen_25dp"
                android:layout_height="@dimen/dimen_25dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dimen_15dp"
                android:background="@mipmap/icon_left_arrow" />
        </RelativeLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:background="@color/gray_200"
        android:layout_marginLeft="@dimen/dimen_18dp"
        android:layout_marginRight="@dimen/dimen_18dp"/>

    <LinearLayout
        android:id="@+id/skin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_78dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="@dimen/dimen_30dp"
            android:layout_height="@dimen/dimen_30dp"
            android:background="@mipmap/icon_skin"
            android:layout_marginLeft="@dimen/dimen_25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_25dp"
            android:gravity="center"
            android:text="@string/skin"
            android:textColor="#404040"
            android:textSize="@dimen/size_16sp"
            android:layout_marginLeft="@dimen/dimen_5dp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="@dimen/dimen_25dp"
                android:layout_height="@dimen/dimen_25dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dimen_15dp"
                android:background="@mipmap/icon_left_arrow" />
        </RelativeLayout>


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:background="@color/gray_200"
        android:layout_marginLeft="@dimen/dimen_18dp"
        android:layout_marginRight="@dimen/dimen_18dp"/>


<!--    <LinearLayout-->
<!--        android:id="@+id/exitLogin"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="@dimen/dimen_78dp"-->
<!--        android:gravity="center_vertical">-->

<!--        <ImageView-->
<!--            android:layout_width="@dimen/dimen_30dp"-->
<!--            android:layout_height="@dimen/dimen_30dp"-->
<!--            android:layout_marginLeft="@dimen/dimen_25dp"-->
<!--            android:background="@mipmap/icon_skin" />-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="@dimen/dimen_25dp"-->
<!--            android:layout_marginLeft="@dimen/dimen_5dp"-->
<!--            android:gravity="center"-->
<!--            android:text="@string/exit"-->
<!--            android:textColor="#404040"-->
<!--            android:textSize="@dimen/size_16sp" />-->

<!--        <RelativeLayout-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content">-->

<!--            <Button-->
<!--                android:layout_width="@dimen/dimen_25dp"-->
<!--                android:layout_height="@dimen/dimen_25dp"-->
<!--                android:layout_alignParentRight="true"-->
<!--                android:layout_marginRight="@dimen/dimen_15dp"-->
<!--                android:background="@mipmap/icon_left_arrow" />-->
<!--        </RelativeLayout>-->

<!--    </LinearLayout>-->

<!--    <View-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="@dimen/dimen_1dp"-->
<!--        android:background="@color/gray_200"-->
<!--        android:layout_marginLeft="@dimen/dimen_18dp"-->
<!--        android:layout_marginRight="@dimen/dimen_18dp"/>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/exitLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:layout_marginBottom="@dimen/dimen_15dp"
            android:background="@drawable/shape_btn_exitlogin"
            android:text="@string/exitLogin"
            android:textColor="@color/white"
            android:textSize="@dimen/size_18sp" />
    </RelativeLayout>
</LinearLayout>