<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity.RegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_329dp"
        android:background="@mipmap/login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_204dp"
            android:layout_marginLeft="@dimen/dimen_18dp"
            android:layout_marginTop="@dimen/dimen_278dp"
            android:layout_marginRight="@dimen/dimen_18dp"
            android:background="@drawable/shape_register_activity"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/dimen_25dp"
                    android:layout_height="@dimen/dimen_25dp"
                    android:layout_marginLeft="@dimen/dimen_43dp"
                    android:background="@mipmap/account" />

                <EditText
                    android:id="@+id/edRegister_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_20dp"
                    android:background="@null"
                    android:inputType="text"
                    android:hint="@string/eduser"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_500"
                    android:textSize="@dimen/size_18sp" />
            </LinearLayout>

            <View
                android:layout_width="@dimen/dimen_267dp"
                android:layout_height="@dimen/dimen_1dp"
                android:layout_marginTop="@dimen/dimen_23dp"
                android:layout_marginBottom="@dimen/dimen_23dp"
                android:background="@color/gray_200" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="@dimen/dimen_25dp"
                    android:layout_height="@dimen/dimen_15dp"
                    android:layout_marginLeft="@dimen/dimen_43dp"
                    android:background="@mipmap/pwd" />

                <EditText
                    android:id="@+id/edRegister_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_20dp"
                    android:background="@null"
                    android:hint="@string/edpwd"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_500"
                    android:textSize="@dimen/size_18sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnRegister_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_marginLeft="@dimen/dimen_18dp"
            android:layout_marginTop="@dimen/dimen_67dp"
            android:layout_marginRight="@dimen/dimen_18dp"
            android:background="@drawable/shape_register_activity_btn"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/size_20sp" />
    </LinearLayout>
</RelativeLayout>